# server-example-rust-actix

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: inbound.rs  mod.rs  outbound.rs  routes.rs
src/api/custom_llm/: basic.rs  mod.rs  openai_advanced.rs  openai_sse.rs
src/api/function_call/: basic.rs  mod.rs  rag.rs
src/api/functions/: basic.rs  rag.rs
src/api/webhook/: index.rs
src/config/: env.rs
src/functions/: fetch_keyword.rs  get_character_inspiration.rs  get_random_name.rs  mod.rs
src/types/: mod.rs  vapi.rs
