[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]                                                               
  actix-web = "4.0.0-beta.8" 
  async-openai = "0.18.0"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  futures = "0.3.15"
  reqwest = "0.11"
  dotenv = "0.15.0"
  rand = "0.8.0"
